WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88072
[EFL] ewk_intent_data_get() is not needed and can be removed
https://bugs.webkit.org/show_bug.cgi?id=88072
Summary
[EFL] ewk_intent_data_get() is not needed and can be removed
Chris Dumez
Reported
2012-06-01 03:30:13 PDT
There is no need for Ewk_Intent to publicly expose WebCore::Intent::data(). As a consequence, the ewk_intent_data_get() method can be removed.
Attachments
Patch
(4.08 KB, patch)
2012-06-01 03:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-06-01 03:41:45 PDT
Created
attachment 145260
[details]
Patch
Adam Barth
Comment 2
2012-06-01 08:36:38 PDT
Comment on
attachment 145260
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2012-06-01 08:56:39 PDT
Comment on
attachment 145260
[details]
Patch Clearing flags on attachment: 145260 Committed
r119238
: <
http://trac.webkit.org/changeset/119238
>
WebKit Review Bot
Comment 4
2012-06-01 08:56:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug